[tool.poetry]
name = "pybookkeeper"
version = "1"
description = "Python app for managing personal finances with simple GUI"
authors = ["Anatoly Chistov <atchistov@gmail.com>", "LXDMIPT Group"]
license = "MIT"
readme = "README.md"
packages = [{include = "bookkeeper"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyside6-stubs = "^6.4.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
bookkeeper = "bookkeeper.presenter:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^1"
pylint = "^2.15.10"
flake8 = "^6.0.0"
mccabe = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
